# visualizing-domestic-migration

./: .gitgnore  README.md  main.py  pyproject.toml  requirements.txt
api/: stat_fi_api.py  stat_fi_api_helpers.py  stat_fi_main.py  stat_fi_queries.py  stat_fi_query.py
data_processing/: PCA_by_year.py  annual_PCA_by_region.py  annual_PCA_by_region_and_origin.py  annual_incoming_PCA_by_region.py  processing_helpers.py  transformation_for_annual_PCA_by_region.py  transformation_for_annual_incoming_PCA_by_region.py  transposition_for_PCA_by_year.py  weighted_directional_graph_by_origin_and_year.py  weighted_directional_graph_by_year.py
data_wrangling/: dataframe_helper.py  dataframe_validator.py  domestic_migration_wrangling.py  mapping_wrangling.py  taxation_wrangling.py  transpose_for_comparability.py
processed_data/: directional_graph_11-12_2019.parquet  directional_graph_11-12_2020.parquet  directional_graph_11-12_2021.parquet  directional_graph_2019.parquet  directional_graph_2020.parquet  directional_graph_2021.parquet  directional_graph_2022.parquet  directional_graph_21-22_2019.parquet  directional_graph_21-22_2020.parquet  directional_graph_21-22_2021.parquet  employment_data_mapping.json  migration_transformed_pca_by_region_2019.parquet  migration_transformed_pca_by_region_2021.parquet  migration_transformed_pca_incoming_by_region_2021.parquet  pca_by_region_11-12_2021.parquet  pca_by_region_2019.parquet  pca_by_region_2020.parquet  pca_by_region_21-22_2021.parquet  pca_incoming_by_region_2020.parquet
raw_data/: area_business_classification.csv  (+6 more)
(+27 files in other folders)
