[project]
name = "visualising-domestic-migration"
version = "0.1.0"
description = "Visualising domestic migration in Finland"
authors = [
    {name = "ihamuma",email = "markus.ihamuotila@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyarrow (>=19.0.0,<20.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
